# LearnC__

./: CMakeLists.txt  README.md  main  randTest.cpp
Companies/Expedia/: dd.cpp  fir.cpp  th.cpp
Companies/JumpTrade/: sec.cpp  thrid.cpp
Companies/freew/: first.cpp  hello.cpp  kkskdjlajs.cpp  sec.cpp  thrd.cpp
Companies/tesla/: sec.cpp
Design/: SingleInstance.cpp  SingleInstanceSafe.cpp
OOP/: SingletonPattern.cpp
c++_primer_plus/: OverwritePlusPlus.cpp  OverwriteRoundBrackets.cpp  constPointer.cpp  copyConstructorTest.cpp  deconstructorTest.cpp  employeeQuestion.cpp  iter_and_recv.cpp  megaNumAdd.cpp  pointer.cpp  polymorphismTest.cpp  reconstruct_operator.cpp  size.cpp  sizeOFStructTest.cpp  stackGrowDirection.cpp  stackTest.cpp  stcak.cpp  stringTest.cpp  struct_size.cpp  template.cpp  typeTransfer.cpp  vectorSorttest.cpp  virtualTableTest.cpp  virtualtable_address_v2.cpp  vtr.cpp
case/: case1.cpp  case2.cpp  charIntTest.cpp  hsadkahsdhaks.cpp  httpRequrstLineTest.cpp  mt2.cpp  mt3.cpp  roblex.cpp  teat123123.cpp  test1.cpp  tm4.cpp
ccf/: 201912-1.cpp  201912-2.cpp  202009-1.cpp  202009-2.cpp  202009-3.cpp  202012-1.cpp  202012-2.cpp  202104-1.cpp  202104-2.cpp
cn_leetcode/: 263_UglyNumber.cpp  733_FloodFill.cpp
cn_leetcode/hot100/: 10_RegularExpressionMatching.cpp  115_threeSum.cpp  125_ValidPalindrome.cpp  13_Roman_to_Integer.cpp  148_SortList.cpp  15_3Sum.cpp  17_LetterCombinationsOfAPhoneNumber.cpp  1_twoSum.cpp  200_NumberOfIslands.cpp  20_ValidParentheses.cpp  221_MaximalSquare.cpp  22_GenerateParentheses.cpp  23_MergekSortedLists.cpp  279_PerfectSquares.cpp  287_FindTheDuplicateNumber.cpp  31_NextPermutation.cpp  322_CoinChange.cpp  33_SearchInRotatedSortedArray.cpp  394_DecodeString.cpp  39_Combination_Sum.cpp  39_LengthofLastWord.cpp  3_LongestSubstringWithoutRepeatingCharacters.cpp  448_FindAllNumbersDisappearedInAnArray.cpp  48_RotateImage.cpp  494_TargetSum.cpp  4_MedianOfTwoSortedArrays.cpp  560_SubarraySumEqualsK .cpp  56_MergeIntervals.cpp  581_ShortestUnsortedContinuousSubarray.cpp  62_Unique_Paths.cpp  72_EditDistance.cpp  75_SortColors.cpp  79_WordSearch.cpp
cn_leetcode/hot100/Hard/: 297_SerializeAndDeserializeBinaryTree.cpp
cn_leetcode/tencent50/: 88_MergeSortedArray.cpp
dequeLearning/: deque.cpp  deque1.cpp  deque2.cpp  deque3.cpp  deque4.cpp  deque5.cpp
jzOffer/: JZ38.cpp  JZ62.cpp  jZ81.cpp  jz13.cpp  jz14.cpp  jz19.cpp  jz25.cpp  jz3.cpp  jz32.cpp  jz34.cpp  jz40.cpp  jz44.cpp  jz47.cpp  jz49.cpp  jz51.cpp  jz74.cpp  jz85.cpp
leetCode/: 1282_GroupthePeopleGiventheGroupSizeTheyBelongTo.cpp  1477_FindTwoNonoverlappingSubArraysEachWithTargetSum.cpp  150_EvaluateReversePolishNotation.cpp  15_3Sum.cpp  16_3SumClosest.cpp  202_HappyNumber.cpp  209_MinimumSizeSubarraySum.cpp  20_ValidParentheses.cpp  227_BasicCalculatorII.cpp  236_LowestCommonAncestorOfBinaryTree.cpp  242_ValidAnagram.cpp  258_AddDigits.cpp  264_UglyNumberII.cpp  300_LongestIncreasingSubsequence.cpp  301_RemoveInvalidParentheses.cpp  301_Remove_Invalid_Parentheses.cpp  314_BinaryTreeVerticalOrderTraversal.cpp  345_ReverseVowelsofaString.cpp  383_RansomNote.cpp  413_ArithmeticSlices.cpp  415_AddStrings.cpp  42Trapping_Rain_Water.cpp  46Permutations.cpp  47_Permutations_II.cpp  496_NextGreaterElementI.cpp  503_NextGreaterElementII.cpp  51_NQueens.cpp  56_MergeIntervals.cpp  62_UniquePaths.cpp  739_Daily_Temperatures.cpp  746_MinCostClimbingStairs.cpp  884_UncommonWordsFromTwoSentences.cpp  8_StringtoInteger.cpp  974_SubarraySumsDivisibleByK.cpp  994_RottingOranges .cpp
leetCode/DynamicProgram/: 1143_LongestCommonSubsequence.cpp  139_WordBreak.cpp  213_HouseRobberII.cpp  309_BestTimetoBuyandSellStockwithCooldown.cpp  376_WiggleSubsequence.cpp  413_ArithmeticSlices.cpp  416_PartitionEqualSubsetSum.cpp  45_JumpGameII.cpp  516_LongestPalindromicSubsequence.cpp  55_JumpGame.cpp  583_DeleteOperationforTwoStrings.cpp  64_MinimumPathSum.cpp  918_MaximumSumCircularSubarray.cpp  931_MinimumFallingPathSum.cpp  Longest_Increasing_Subsequence.cpp  Pascals_Triangle.cpp  coinChange.cpp
leetCode/KnapsackProblem/: 416_PartitionEqualSubsetSum.cpp
leetCode/LinkedList/: 143_ReorderList.cpp  148_SortList.cpp  234_palindrome_linked_list.cpp  ve2ls.cpp  ve2ls.h
leetCode/Palindrome/: 125_ValidPalindrome.cpp  5_LongestPalindromicSubstring.cpp  9_PalindromeNumber.cpp
leetCode/graph/: 797_AllPathsFromSourcetoTarget.cpp
main.dSYM/Contents/Resources/DWARF/: main
sort/: heaoSort.cpp  mergeSortTest.cpp  quicksort.cpp  vectorTest.cpp
stringLearning/: kmpAlgorithm.cpp  string01.cpp  string02.cpp  string03.cpp  string04.cpp  string05.cpp  string06.cpp  string07.cpp  string08.cpp
threading/: test1.cpp
threading/intro/: createType.cpp  intro  intro.cpp  joinAndDetach.cpp  mutexLock.cpp  thredIntro  thredIntro.cpp
threading/mutex/: async.cpp  conditionVairable.cpp  futureAndPromise.cpp  lockGuard.cpp  producerAndConsumer.cpp  recursiveMutex.cpp  stdLock.cpp  threadSynchronisation.cpp  timedMutex.cpp  tryLock.cpp  uniqueLock.cpp
vectorLearning/: kkk.cpp  vector1.cpp  vector2.cpp  vector3.cpp  vector4.cpp  vector5.cpp  vector6.cpp  vector7.cpp  vector8.cpp  vector9.cpp  vectorCapaExpand.cpp
