cmake_minimum_required(VERSION 3.15)
project(LearnC__)

set(CMAKE_CXX_STANDARD 14)
INCLUDE_DIRECTORIES(/Users/franklin/CLionProjects/LearnC++/leetCode/LinkedList/)

#ADD_SUBDIRECTORY(leetCode/LinkedList)
#SET(LIBVET2LIST_SRC ve2ls.c)
#ADD_LIBRARY(ve2ls SHARED ${LIBVET2LIST_SRC})

add_executable(LearnC__ main.cpp vectorLearning/vector1.cpp vectorLearning/vector3.cpp vectorLearning/vector9.cpp)
add_executable(vector1 vectorLearning/vector1.cpp)
add_executable(vector2 vectorLearning/vector2.cpp)
add_executable(vector3 vectorLearning/vector3.cpp)
add_executable(string01 stringLearning/string01.cpp)
add_executable(string02 stringLearning/string02.cpp)
add_executable(string03 stringLearning/string03.cpp)
add_executable(string04 stringLearning/string04.cpp)
add_executable(string05 stringLearning/string05.cpp)
add_executable(string06 stringLearning/string06.cpp)
add_executable(string07 stringLearning/string07.cpp)
add_executable(string08 stringLearning/string08.cpp)
add_executable(vector4 vectorLearning/vector4.cpp)
add_executable(vector5 vectorLearning/vector5.cpp)
add_executable(vector6 vectorLearning/vector6.cpp)
add_executable(vector8 vectorLearning/vector8.cpp)
add_executable(vector9 vectorLearning/vector9.cpp)
add_executable(deque dequeLearning/deque.cpp dequeLearning/deque3.cpp dequeLearning/deque4.cpp dequeLearning/deque5.cpp)
add_executable(deque1 dequeLearning/deque1.cpp)
add_executable(deque2 dequeLearning/deque2.cpp)
add_executable(deque3 dequeLearning/deque3.cpp)
add_executable(deque4 dequeLearning/deque4.cpp)
add_executable(deque5 dequeLearning/deque5.cpp)
add_executable(jz34 jzOffer/jz34.cpp)
add_executable(jz51 jzOffer/jz51.cpp)
add_executable(jz40 jzOffer/jz40.cpp)
add_executable(202104-1 ccf/202104-1.cpp)
add_executable(202104-2 ccf/202104-2.cpp)
add_executable(202012-2 ccf/202012-2.cpp)
add_executable(jz13 jzOffer/jz13.cpp)
add_executable(202009-1 ccf/202009-1.cpp)
add_executable(202009-2 ccf/202009-2.cpp)
add_executable(201912-1 ccf/201912-1.cpp threading/mutex/tryLock.cpp)

add_executable(201912-2 ccf/201912-2.cpp)
add_executable(jz19 jzOffer/jz19.cpp)
add_executable(jz32 jzOffer/jz32.cpp)
add_executable(jz49 jzOffer/jz49.cpp)
add_executable(jz44 jzOffer/jz44.cpp)
add_executable(kmpAlgorithm stringLearning/kmpAlgorithm.cpp)
add_executable(intro threading/intro/intro.cpp)
add_executable(thredIntro threading/intro/thredIntro.cpp)
add_executable(createType threading/intro/createType.cpp)
add_executable(joinAndDetach threading/intro/joinAndDetach.cpp)
add_executable(mutex threading/intro/mutexLock.cpp)
add_executable(tryLock threading/mutex/tryLock.cpp)
add_executable(timedMutex threading/mutex/timedMutex.cpp)
add_executable(recursiveMutex threading/mutex/recursiveMutex.cpp)
add_executable(lockGuard threading/mutex/lockGuard.cpp)
add_executable(uniqueLock threading/mutex/uniqueLock.cpp)
add_executable(conditionVairable threading/mutex/conditionVairable.cpp)
add_executable(threadSynchronisation threading/mutex/threadSynchronisation.cpp)
add_executable(futureAndPromise threading/mutex/futureAndPromise.cpp)
add_executable(async threading/mutex/async.cpp)
add_executable(producerAndConsumer threading/mutex/producerAndConsumer.cpp)
add_executable(Pascals_Triangle leetCode/DynamicProgram/Pascals_Triangle.cpp)
add_executable(coinChange leetCode/DynamicProgram/coinChange.cpp)
add_executable(Longest_Increasing_Subsequence leetCode/DynamicProgram/Longest_Increasing_Subsequence.cpp)
add_executable(jZ81 jzOffer/jZ81.cpp)
add_executable(jz14 jzOffer/jz14.cpp)
add_executable(jz74 jzOffer/jz74.cpp)

add_executable(iter_and_recv c++_primer_plus/iter_and_recv.cpp)
add_executable(stcak c++_primer_plus/stcak.cpp)
add_executable(46Permutations leetCode/46Permutations.cpp)
add_executable(47_Permutations_II leetCode/47_Permutations_II.cpp)
add_executable(randTest randTest.cpp)
add_executable(383_RansomNote leetCode/383_RansomNote.cpp)
add_executable(242_ValidAnagram leetCode/242_ValidAnagram.cpp leetCode/15_3Sum.cpp leetCode/16_3SumClosest.cpp)
add_executable(15_3Sum cn_leetcode/hot100/15_3Sum.cpp)
add_executable(8_StringtoInteger leetCode/8_StringtoInteger.cpp)
add_executable(345_ReverseVowelsofaString leetCode/345_ReverseVowelsofaString.cpp)
add_executable(739_Daily_Temperatures leetCode/739_Daily_Temperatures.cpp)
add_executable(227_BasicCalculatorII leetCode/227_BasicCalculatorII.cpp)
add_executable(496_NextGreaterElementI leetCode/496_NextGreaterElementI.cpp)
add_executable(503_NextGreaterElementII leetCode/503_NextGreaterElementII.cpp)
add_executable(150_EvaluateReversePolishNotation leetCode/150_EvaluateReversePolishNotation.cpp)
add_executable(300_LongestIncreasingSubsequence leetCode/300_LongestIncreasingSubsequence.cpp)
add_executable(918_MaximumSumCircularSubarray leetCode/DynamicProgram/918_MaximumSumCircularSubarray.cpp)
add_executable(213_HouseRobberII leetCode/DynamicProgram/213_HouseRobberII.cpp leetCode/DynamicProgram/309_BestTimetoBuyandSellStockwithCooldown.cpp)
add_executable(55_JumpGame leetCode/DynamicProgram/55_JumpGame.cpp)
add_executable(45_JumpGameII leetCode/DynamicProgram/45_JumpGameII.cpp)
add_executable(vectorCapaExpand vectorLearning/vectorCapaExpand.cpp)
add_executable(309_BestTimetoBuyandSellStockwithCooldown leetCode/DynamicProgram/309_BestTimetoBuyandSellStockwithCooldown.cpp)
add_executable(139_WordBreak leetCode/DynamicProgram/139_WordBreak.cpp)
add_executable(64_MinimumPathSum leetCode/DynamicProgram/64_MinimumPathSum.cpp)
add_executable(931_MinimumFallingPathSum leetCode/DynamicProgram/931_MinimumFallingPathSum.cpp)
add_executable(413_ArithmeticSlices leetCode/413_ArithmeticSlices.cpp)
add_executable(51_NQueens leetCode/51_NQueens.cpp)
add_executable(1143_LongestCommonSubsequence leetCode/DynamicProgram/1143_LongestCommonSubsequence.cpp)
add_executable(583_DeleteOperationforTwoStrings leetCode/DynamicProgram/583_DeleteOperationforTwoStrings.cpp)

add_executable(416_PartitionEqualSubsetSum leetCode/KnapsackProblem/416_PartitionEqualSubsetSum.cpp)
add_executable(jz47 jzOffer/jz47.cpp)
add_executable(516_LongestPalindromicSubsequence leetCode/DynamicProgram/516_LongestPalindromicSubsequence.cpp)
add_executable(test1 cn_leetcode/733_FloodFill.cpp)
add_executable(httpRequrstLineTest case/httpRequrstLineTest.cpp)
add_executable(62_UniquePaths leetCode/62_UniquePaths.cpp)
add_executable(376_WiggleSubsequence leetCode/DynamicProgram/376_WiggleSubsequence.cpp)
add_executable(42Trapping_Rain_Water leetCode/42Trapping_Rain_Water.cpp)
add_executable(746_MinCostClimbingStairs leetCode/746_MinCostClimbingStairs.cpp)
add_executable(236_LowestCommonAncestorOfBinaryTree leetCode/236_LowestCommonAncestorOfBinaryTree.cpp)

add_executable(20_ValidParentheses cn_leetcode/hot100/20_ValidParentheses.cpp)
add_executable(teat123123 case/teat123123.cpp)
add_executable(mergeSortTest sort/mergeSortTest.cpp)
add_executable(quicksort sort/quicksort.cpp)
add_executable(JZ62 jzOffer/JZ62.cpp)
add_executable(jz85 jzOffer/jz85.cpp)
add_executable(1_twoSum cn_leetcode/hot100/1_twoSum.cpp)
add_executable(39_LengthofLastWord cn_leetcode/hot100/39_LengthofLastWord.cpp)

add_executable(13_Roman_to_Integer cn_leetcode/hot100/13_Roman_to_Integer.cpp)
add_executable(62_Unique_Paths cn_leetcode/hot100/62_Unique_Paths.cpp)
add_executable(125_ValidPalindrome leetCode/Palindrome/125_ValidPalindrome.cpp)
add_executable(448_FindAllNumbersDisappearedInAnArray cn_leetcode/hot100/448_FindAllNumbersDisappearedInAnArray.cpp)
add_executable(22_GenerateParentheses cn_leetcode/hot100/22_GenerateParentheses.cpp)
add_executable(10_RegularExpressionMatching cn_leetcode/hot100/10_RegularExpressionMatching.cpp cn_leetcode/hot100/39_Combination_Sum.cpp "cn_leetcode/hot100/75_SortColors.cpp")
add_executable(31_NextPermutation cn_leetcode/hot100/31_NextPermutation.cpp)
add_executable(56_MergeIntervals leetCode/56_MergeIntervals.cpp)
add_executable(322_CoinChange cn_leetcode/hot100/322_CoinChange.cpp)
add_executable(394_DecodeString cn_leetcode/hot100/394_DecodeString.cpp)
add_executable(221_MaximalSquare cn_leetcode/hot100/221_MaximalSquare.cpp)
add_executable(39_Combination_Sum cn_leetcode/hot100/39_Combination_Sum.cpp)
add_executable(287_FindTheDuplicateNumber cn_leetcode/hot100/287_FindTheDuplicateNumber.cpp)
add_executable(279_PerfectSquares cn_leetcode/hot100/279_PerfectSquares.cpp)
add_executable(494_TargetSum cn_leetcode/hot100/494_TargetSum.cpp)
add_executable(3_LongestSubstringWithoutRepeatingCharacters cn_leetcode/hot100/3_LongestSubstringWithoutRepeatingCharacters.cpp)
add_executable(75_SortColors cn_leetcode/hot100/75_SortColors.cpp)
add_executable(33_SearchInRotatedSortedArray cn_leetcode/hot100/33_SearchInRotatedSortedArray.cpp)
add_executable(115_threeSum cn_leetcode/hot100/115_threeSum.cpp)
add_executable(200_NumberOfIslands cn_leetcode/hot100/200_NumberOfIslands.cpp)
add_executable(560_SubarraySumEqualsK  "cn_leetcode/hot100/560_SubarraySumEqualsK .cpp")
add_executable(17_LetterCombinationsOfAPhoneNumber cn_leetcode/hot100/17_LetterCombinationsOfAPhoneNumber.cpp)
add_executable(48_RotateImage cn_leetcode/hot100/48_RotateImage.cpp)
add_executable(148_SortList leetCode/LinkedList/148_SortList.cpp)

add_executable(581_ShortestUnsortedContinuousSubarray cn_leetcode/hot100/581_ShortestUnsortedContinuousSubarray.cpp)
add_executable(4_MedianOfTwoSortedArrays cn_leetcode/hot100/4_MedianOfTwoSortedArrays.cpp)
add_executable(72_EditDistance cn_leetcode/hot100/72_EditDistance.cpp)
add_executable(charIntTest case/charIntTest.cpp)
add_executable(SingleInstance Design/SingleInstance.cpp)
add_executable(23_MergekSortedLists cn_leetcode/hot100/23_MergekSortedLists.cpp)
add_executable(88_MergeSortedArray cn_leetcode/tencent50/88_MergeSortedArray.cpp)
add_executable(heaoSort sort/heaoSort.cpp)

add_executable(994_RottingOranges  "leetCode/994_RottingOranges .cpp")
add_executable(tm4 case/tm4.cpp)
add_executable(mt2 case/mt2.cpp)
add_executable(mt3 case/mt3.cpp)
add_executable(vectorTest sort/vectorTest.cpp)
add_executable(sizeOFStructTest c++_primer_plus/sizeOFStructTest.cpp)
add_executable(stackGrowDirection c++_primer_plus/stackGrowDirection.cpp)
add_executable(virtualTableTest c++_primer_plus/virtualTableTest.cpp)
add_executable(polymorphismTest c++_primer_plus/polymorphismTest.cpp)
add_executable(stackTest c++_primer_plus/stackTest.cpp)
add_executable(constPointer c++_primer_plus/constPointer.cpp)
add_executable(vectorSorttest c++_primer_plus/vectorSorttest.cpp)
add_executable(copyConstructorTest c++_primer_plus/copyConstructorTest.cpp)
add_executable(sec Companies/JumpTrade/sec.cpp)
add_executable(kkskdjlajs Companies/freew/kkskdjlajs.cpp)
add_executable(kkk vectorLearning/kkk.cpp)
add_executable(hello Companies/freew/hello.cpp)


add_executable(263_UglyNumber cn_leetcode/263_UglyNumber.cpp)
add_executable(stringTest c++_primer_plus/stringTest.cpp)
add_executable(deconstructorTest c++_primer_plus/deconstructorTest.cpp)
add_executable(297_SerializeAndDeserializeBinaryTree cn_leetcode/hot100/Hard/297_SerializeAndDeserializeBinaryTree.cpp)

add_executable(thrid Companies/JumpTrade/thrid.cpp)
add_executable(SingletonPattern OOP/SingletonPattern.cpp)
add_executable(size c++_primer_plus/size.cpp)
add_executable(pointer c++_primer_plus/pointer.cpp)
add_executable(struct_size c++_primer_plus/struct_size.cpp)
add_executable(dd Companies/Expedia/dd.cpp)
add_executable(th Companies/Expedia/th.cpp)
add_executable(fir Companies/Expedia/fir.cpp)
add_executable(314_BinaryTreeVerticalOrderTraversal leetCode/314_BinaryTreeVerticalOrderTraversal.cpp)
add_executable(vtr c++_primer_plus/vtr.cpp)
add_executable(258_AddDigits leetCode/258_AddDigits.cpp)
add_executable(974_SubarraySumsDivisibleByK leetCode/974_SubarraySumsDivisibleByK.cpp)
add_executable(1282_GroupthePeopleGiventheGroupSizeTheyBelongTo leetCode/1282_GroupthePeopleGiventheGroupSizeTheyBelongTo.cpp)
add_executable(megaNumAdd c++_primer_plus/megaNumAdd.cpp)
add_executable(1477_FindTwoNonoverlappingSubArraysEachWithTargetSum leetCode/1477_FindTwoNonoverlappingSubArraysEachWithTargetSum.cpp)

add_executable(OverwriteRoundBrackets c++_primer_plus/OverwriteRoundBrackets.cpp)
add_executable(OverwritePlusPlus c++_primer_plus/OverwritePlusPlus.cpp)
add_executable(typeTransfer c++_primer_plus/typeTransfer.cpp)
add_executable(template c++_primer_plus/template.cpp)
add_executable(415_AddStrings leetCode/415_AddStrings.cpp)
add_executable(16_3SumClosest leetCode/16_3SumClosest.cpp)

add_executable(9_PalindromeNumber leetCode/Palindrome/9_PalindromeNumber.cpp)
add_executable(5_LongestPalindromicSubstring leetCode/Palindrome/5_LongestPalindromicSubstring.cpp)

add_executable(virtualtable_address_v2 c++_primer_plus/virtualtable_address_v2.cpp)
add_executable(202_HappyNumber leetCode/202_HappyNumber.cpp)
add_executable(264_UglyNumberII leetCode/264_UglyNumberII.cpp)
add_executable(employeeQuestion c++_primer_plus/employeeQuestion.cpp)
add_executable(884_UncommonWordsFromTwoSentences leetCode/884_UncommonWordsFromTwoSentences.cpp)
add_executable(209_MinimumSizeSubarraySum leetCode/209_MinimumSizeSubarraySum.cpp)
add_executable(test case/hsadkahsdhaks.cpp)

add_executable(234_palindrome_linked_list leetCode/LinkedList/234_palindrome_linked_list.cpp)
add_executable(143_ReorderList leetCode/LinkedList/143_ReorderList.cpp)
add_executable(ve2ls leetCode/LinkedList/ve2ls.cpp)

add_executable(301_Remove_Invalid_Parentheses leetCode/301_Remove_Invalid_Parentheses.cpp)

add_executable(README README.md)